Bug 1120047 - Fix glibc version check guards for and importing of __libc_stack_end. r=glandium